# agent-os

./: .env.example  .gitignore  README.md  pyproject.toml
agentos/: __init__.py  config.py  main.py
agentos-core/: .env.example  README.md
agentos-core/bench/: tasks.json
agentos-core/console/: .env.local.example  package-lock.json  package.json
agentos-core/tests/: test_loop.py
agentos-core/ui/: index.html
agentos/api/: __init__.py  routes.py
agentos/eval/: __init__.py  reflection.py  scorer.py
agentos/llm/: __init__.py  factory.py  mock.py  ollama.py  protocol.py
agentos/memory/: salience.py  store.py
agentos/runtime/: __init__.py  context_packer.py  loop.py  planner.py
agentos/tools/: __init__.py  builtin.py  registry.py
agentos_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: pyproject.toml  requirements.txt
backend/.deepeval/: .deepeval_telemetry.txt
backend/agentos/: config.py  main.py
backend/app/: main.py
backend/tests/: test_api.py  test_tools.py  test_trace.py
bench/: report.py  runner.py  tasks.json
bench/results/: REPORT.md
console/: tailwind.config.ts
console/components/: dashboard-shell.tsx  run-list.tsx
console/lib/: types.ts
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-interface.tsx  settings-dialog.tsx  sidebar.tsx  trace-node.tsx
frontend/lib/: api.ts  mock-data.ts  store.ts  (+1 more)
scratch/: debug_langfuse.py
tests/: conftest.py  test_api.py  test_context.py  test_loop.py  test_memory.py  test_scorer.py  test_tools.py  test_trace.py
(+76 files in other folders)
