[project]
name = "agentos-core"
version = "0.1.0"
description = "A local-first orchestration and observability layer for agentic workflows."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
ollama = ["httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
packages = ["agentos", "agentos.runtime", "agentos.memory", "agentos.tools", "agentos.llm", "agentos.eval", "agentos.api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
